Fix OXUIB-815 CSS broken in bottom toolbar of folder tree
- fix styling of bottom toolbar
- replace normal double angle icons with svg icons

--- a/ui/apps/themes/components/listview.less
+++ b/ui/apps/themes/components/listview.less
@@ -102,7 +102,7 @@
     }
 
     &.toolbar-top-visible .toolbar.top,
-    &.toolbar-bottom-visible .toolbar.bottom { display: block; margin-bottom: 0; }
+    &.toolbar-bottom-visible .toolbar.bottom { display: flex; margin-bottom: 0; }
 
     &:not(.upside-down) {
         &.toolbar-top-visible .list-view { top: @height-default; }
