--- a/ui/apps/themes/components/toolbar.less
+++ b/ui/apps/themes/components/toolbar.less
@@ -398,6 +398,8 @@
     }
 
     &.bottom {
+        display: flex;
+        justify-content: space-between;
         bottom: 0;
         border-top-width: 1px;
         z-index: 1;
@@ -419,7 +421,8 @@
     }
 
     .io-ox-context-help {
-        float: right;
+        display: flex;
+        align-items: center;
         padding-left: 16px;
         padding-right: 16px;
     }
